src/blocks/profile.css
.profile {
  margin: 34px auto 0 auto;
  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
  font-family: Poppins, Arial, sans-serif;
  font-size: 16px;
  line-height: 1;
  font-weight: 500;
  color: #212121;
  display: flex;
  padding: 0 0 20px 0;
  justify-content: space-between;
}

.profile__bio {
  display: flex;
  flex-direction: row;
  column-gap: 20px;
}

.profile__image {
  width: 190px;
  height: 190px;
  border-radius: 8px;
  object-fit: cover;
}

.profile__pencil-icon {
}

.profile__avatar-btn {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: absolute;
  padding: 0;
  padding-bottom: 12px;
  width: 100%;
  height: 98.5%;
  border: none;
  background-color: transparent;
  color: #ffffff;
  /* margin-bottom: 12px; */
  visibility: hidden;
  cursor: pointer;
  border-radius: 8px;
}

.profile__avatar-btn::after {
  content: "Edit Avatar";
}

.profile__avatar-container {
  position: relative;
}

.profile__avatar-container:hover .profile__avatar-btn {
  /* transition: 1s ease-in-out; */
  background-color: #00000050;
  visibility: visible;
}

.profile__texts {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.profile__text {
}

.profile__name {
  color: #212121;
  font-size: 32px;
  line-height: 1;
  font-weight: 500;
  margin: 0 0 12px 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 260px;
}

.profile__description {
  margin: 0;
  color: #212121b2;
  font-size: 16px;
  line-height: 1;
  font-weight: 500;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
}

.profile__edit-btn {
  color: #212121;
  font-weight: 500;
  opacity: 70%;
  display: flex;
  flex-direction: row;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.profile__edit-btn:hover {
  opacity: 1;
  transition: 0.75s;
}

.profile__pencil {
  width: 16px;
  height: 16px;
  padding-right: 8px;
}

.profile__edit {
  margin: 0;
  font-size: 16px;
  line-height: 1;
}

.profile__post-btn {
  align-self: flex-end;
  display: flex;
  flex-direction: row;
  background-color: #212121;
  border-radius: 8px;
  /* margin-left: auto; */
  width: 149px;
  justify-content: center;
  padding: 0;
  border: none;
  cursor: pointer;
}

.profile__post-btn:hover {
  opacity: 80%;
  transition: 1s;
}

.profile__plus-btn {
  color: transparent;
  padding: 0 8px 0 0;
  margin: 0;
  padding: 20px 8px 20px 0;
}

.profile__post-btn-text {
  color: #fcf5e5;
  margin: 0;
  padding: 18px 0;
}

@media screen and (max-width: 627px) {
  .profile {
    margin-top: 20px;
    flex-direction: column;
    align-items: center;
    text-align: center;
    max-width: 288px;
  }

  .profile__bio {
    flex-direction: column;
    align-items: center;
  }

  .profile__image {
    width: 80px;
    height: 80px;
  }

  .profile__avatar-btn {
    position: absolute;
    top: 52px;
    left: 52px;
    /* width: 100%; */
    border: none;
    background-color: #21212160;
    border-radius: 6px;
    padding: 4px;
    width: 25px;
    height: 25px;
    color: #ffffff;
    margin-bottom: 5px;
    margin-right: 5px;
    visibility: visible;
  }

  .profile__avatar-btn::after {
    content: none;
  }

  .profile__post-btn {
    align-self: center;
    width: 100%;
  }

  .profile__texts {
    display: flex;
    align-items: center;
    margin: 12px 0 20px;
  }

  .profile__text {
    /* display: flex; */
    /* flex-direction: column; */
    /* align-items: center; */
    margin-bottom: 32px;
  }

  .profile__name {
    margin: 0 6px;
    font-size: 20px;
    line-height: 1;
  }

  .profile__description {
    margin: 6px 0 0;
  }
}

